--- a/style.css
+++ b/style.css
@@ -392,13 +392,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-
   padding: 15px 30px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 .pluginsContent .pluginCard .icon {
-  height: 25px;
+  height: auto;
   width: 25px;
   padding: 0 25px;
 }
@@ -443,7 +442,7 @@
   /* background-color: #fff; */
   display: flex;
   justify-content: space-between;
-  /* align-items: center ; */
+  align-items: center;
   padding: 15px 0;
   border-radius: 10px;
   gap: 10px;
@@ -534,7 +533,6 @@
   font-size: 30px;
 }
 .FAQcontent h3 {
-  color: gray;
   font-weight: 500;
 }
 .FAQcontent h3 span {
@@ -552,7 +550,6 @@
   padding: 25px;
   display: flex;
   justify-content: space-between;
-  color: gray;
 }
 
 /* FOOTER ****************************************** */
@@ -690,14 +687,15 @@
     max-width: 100%;
   }
   .headerContent {
-    padding: 100px 10px;
+    padding: 120px 0;
     max-width: 100%;
 
     box-sizing: border-box; /* Avoid any overflow due to padding */
   }
   .header h1 {
-    font-size: 40px; /* Adjust font size */
+    font-size: 46px; /* Adjust font size */
     line-height: 1.2;
+    padding: 0;
     /* max-width: 99%; */
   }
   .headerContent p {
@@ -707,10 +705,13 @@
   }
   .headerContent .buttons {
     display: flex;
-    /* padding: 5px 20px; */
-    /* font-size: 14px; */
+
     /* margin: 10px 0;  */
     /* width: 100%;  */
+  }
+  .headerContent .buttons button {
+    padding: 15px 35px;
+    font-size: 15px;
   }
   /* LandingPageCard ****************************************** */
   .LandingPageCardContent {
@@ -729,7 +730,7 @@
   }
   .LandingPageCardContent .cards img {
     height: auto;
-    width: 380px;
+    width: 350px;
     margin: 0 auto;
     padding-right: 0;
     border-radius: 10px;
@@ -751,6 +752,9 @@
     width: 95%;
     padding: 20px 0;
   }
+  .moreLandingPageContext .images img {
+    width: 350px;
+  }
   /* SVGDecoration******************************************* */
   .SVGDecorationContext {
     display: flex;
@@ -765,7 +769,7 @@
   }
   .SVGDecorationContext .left img {
     height: auto;
-    width: 350px;
+    width: 330px;
   }
   .SVGDecorationContext .right {
     padding-left: 10px;
@@ -826,7 +830,7 @@
     font-size: 35px;
     text-align: center;
     margin: 20px 0;
-  } 
+  }
   .lessWorkContent .para {
     font-size: 18px;
     text-align: center;
@@ -837,9 +841,138 @@
   }
   .lessWorkContent .whiteBox {
     width: 340px;
+    padding: 15px 0;
   }
 
   .lessWorkContent .whiteBox p {
     font-size: 14px;
+  }
+
+  /* PLUGINS *************************************************** */
+  .pluginsContent {
+    max-width: 95%;
+  }
+  .pluginsContent .pluginCards {
+    grid-template-columns: 1fr; /* Single-column layout */
+    gap: 10px; /* Adjust gap for better spacing */
+  }
+  .pluginsContent .pluginCard {
+    /* Adjust content alignment for narrower width */
+    align-items: center; /* Align items to the start */
+    padding: 10px 10px; /* Adjust padding for better spacing */
+  }
+  .pluginsContent .pluginCard .icon {
+    margin-bottom: 10px; /* Add spacing between the icon and text */
+    padding: 0; /* Remove extra padding */
+  }
+  /* NOTABLE ********************************************************** */
+  .notableFeaturesContent {
+    max-width: 95%;
+  }
+  .notableFeaturesContent .notableCards {
+    grid-template-columns: 1fr; /* Single-column layout */
+    gap: 10px; /* Adjust gap for better spacing */
+  }
+
+  .notableFeaturesContent .notableCard {
+    align-items: center; /* Align items to the start */
+    padding: 10px 10px;
+  }
+  .notableFeaturesContent .notableCard .icon {
+    margin-bottom: 10px; /* Add spacing between the icon and text */
+    padding: 0;
+  }
+
+  /* CustomerReview********************************************** */
+  .cunstomerReviewContent {
+    max-width: 99%;
+  }
+  .cunstomerReviewContent h1 {
+    font-size: 40px;
+
+    width: 90%;
+  }
+  .cunstomerReviewContent .para {
+    font-size: 18px;
+    width: 90%;
+  }
+  .cunstomerReviewContent .cards {
+    grid-template-columns: 1fr; /* Single-column layout */
+    gap: 10px; /* Adjust gap for better spacing */
+  }
+  .cunstomerReviewContent .cards .card {
+    margin: 25px;
+  }
+  .cunstomerReviewContent .cards .card .prePara {
+    width: 99%;
+    font-size: 18px;
+    line-height: 1.3;
+    color: gray;
+  }
+
+  /* FAQ ********************************************************* */
+  .FAQcontent {
+    width: 90%;
+  }
+  .FAQcontent .faqcards .faqcard h4 {
+    font-size: 14px;
+  }
+  .FAQcontent h3 {
+    font-size: 15px;
+  }
+
+  /* FOOTER ****************************************** */
+  .footercontent {
+    max-width: 95%;
+  }
+  .footercontent .blueBox {
+    display: flex;
+    flex-direction: column;
+    padding: 30px 20px;
+  }
+  .footercontent .blueBox h1 {
+    text-align: center;
+  }
+  .footercontent .blueBox button {
+    margin: 10px 50px;
+    padding: 10px 0;
+  }
+  .footercontent .information {
+    display: grid;
+    grid-template-columns: auto auto auto auto; /* Four columns */
+    grid-gap: 10px; /* Space between grid items */
+  }
+  .footercontent .information .navigate {
+    grid-column: 1 / 2; /* Starts in the first column and spans to the second */
+    grid-row: 1;
+  }
+  .footercontent .information .contact {
+    grid-column: 2 / 3; /* Starts in the second column and spans to the third */
+    grid-row: 1;
+  }
+  .footercontent .information .subcribe {
+    grid-column: 1 / 3; /* Starts in the first column and spans to the third */
+    grid-row: 2;
+  }
+  .footercontent .information .contact {
+    margin-right: 0;
+  }
+  .footercontent .information .contact .first {
+    margin-right: 0;
+    margin: 10px 0;
+  }
+  .footercontent .information .contact .first .text p {
+    width: 90%;
+    font-size: 15px;
+  }
+  .footercontent .information .contact h2 {
+    padding-bottom: 10px;
+  }
+  .footercontent .information .contact .icon {
+    padding: 20px 20px 10px 0;
+  }
+  .footercontent .information .subcribe {
+    /* border: 1px solid white; */
+    width: 99%;
   }
 }
