--- a/style.css
+++ b/style.css
@@ -171,6 +171,12 @@
   width: 450px;
   border-radius: 20px;
   padding: 80px 20px;
+
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.moreLandingPageContext .images img:hover {
+  transform: rotate(-2deg) translateX(5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 /* SVGDecoration******************************************* */
 .SVGDecoration {
@@ -395,6 +401,11 @@
   padding: 15px 30px;
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.pluginsContent .pluginCard:hover {
+  transform: rotate(-2deg) translateX(5px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
 }
 .pluginsContent .pluginCard .icon {
   height: auto;
