--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 /* NAVBAR*************************************************************** */
 .navbar {
   position: fixed;
-  top: 0; /* Aligns it to the top of the viewport */
-  left: 0; /* Aligns it to the left */
+  top: 0;  
+  left: 0;  
   width: 100%;
   text-align: center;
   display: flex;
@@ -54,8 +54,7 @@
   text-align: center;
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column;
-  /* justify-content: center; */
+  flex-direction: column; 
   align-items: center;
   color: white;
   background-color: #3755be;
@@ -72,9 +71,9 @@
   line-height: 1;
 }
 .headerContent p {
-  max-width: 89%; /* Sets the maximum width of the paragraph */
-  margin: auto; /* Centers the paragraph horizontally */
-  text-align: center; /* Centers the text inside the paragraph */
+  max-width: 89%;  
+  margin: auto;  
+  text-align: center;  
   padding: 15px 0;
   letter-spacing: 1px;
 }
@@ -136,14 +135,14 @@
   font-size: 17px;
   font-weight: bold;
   padding: 15px 0;
-  display: flex; /* Enable flexbox layout */
-  align-items: center; /* Vertically center the content */
-  gap: 10px; /* Add space between the SVG and the text */
+  display: flex; 
+  align-items: center;  
+  gap: 10px;  
 }
 
 .LandingPageCardContent .cards .right ul li svg {
-  width: 34px; /* Set desired width */
-  height: 34px; /* Set desired height */
+  width: 34px;  
+  height: 34px;  
 }
 /* MORELANDINGPAGES************************************************** */
 .moreLandingPage {
@@ -379,8 +378,8 @@
 .pluginsContent {
   /* border: 1px solid black; */
   max-width: 75%;
-  margin: 0 auto; /* Center-align without additional space */
-  padding: 100px 0 10px 0; /* Adjust padding for spacing inside */
+  margin: 0 auto;  
+  padding: 100px 0 10px 0;  
 }
 .pluginsContent h1 {
   font-size: 40px;
@@ -426,14 +425,14 @@
 /* NOTABLE ********************************************************** */
 .NotableFeatures {
   background-color: #3755be;
-  margin: 0; /* Remove all margins */
-  padding: 0; /* Remove padding if needed */
+  margin: 0;  
+  padding: 0;  
 }
 
 .notableFeaturesContent {
   max-width: 75%;
-  margin: 0 auto; /* Center-align without additional space */
-  padding: 50px 0 100px 0; /* Adjust padding for spacing inside */
+  margin: 0 auto;  
+  padding: 50px 0 100px 0; 
 }
 
 .notableFeaturesContent h1 {
@@ -690,7 +689,7 @@
   }
   /* HEADER *************************************************************** */
   .header {
-    height: auto; /* Flexible height */
+    height: auto; 
     padding: 20px;
     width: 100%;
     /* margin: 0 auto; */
@@ -701,18 +700,18 @@
     padding: 120px 0;
     max-width: 100%;
 
-    box-sizing: border-box; /* Avoid any overflow due to padding */
+    box-sizing: border-box; 
   }
   .header h1 {
-    font-size: 46px; /* Adjust font size */
+    font-size: 46px;  
     line-height: 1.2;
     padding: 0;
     /* max-width: 99%; */
   }
   .headerContent p {
     font-size: 18px;
-    width: 100%; /* Full width for paragraph */
-    margin: 0 auto; /* Center the text */
+    width: 100%; 
+    margin: 0 auto;  
   }
   .headerContent .buttons {
     display: flex;
@@ -864,33 +863,33 @@
     max-width: 95%;
   }
   .pluginsContent .pluginCards {
-    grid-template-columns: 1fr; /* Single-column layout */
-    gap: 10px; /* Adjust gap for better spacing */
+    grid-template-columns: 1fr;  
+    gap: 10px;  
   }
   .pluginsContent .pluginCard {
-    /* Adjust content alignment for narrower width */
-    align-items: center; /* Align items to the start */
-    padding: 10px 10px; /* Adjust padding for better spacing */
+   
+    align-items: center;  
+    padding: 10px 10px; 
   }
   .pluginsContent .pluginCard .icon {
-    margin-bottom: 10px; /* Add spacing between the icon and text */
-    padding: 0; /* Remove extra padding */
+    margin-bottom: 10px; 
+    padding: 0;  
   }
   /* NOTABLE ********************************************************** */
   .notableFeaturesContent {
     max-width: 95%;
   }
   .notableFeaturesContent .notableCards {
-    grid-template-columns: 1fr; /* Single-column layout */
-    gap: 10px; /* Adjust gap for better spacing */
+    grid-template-columns: 1fr;  
+    gap: 10px;  
   }
 
   .notableFeaturesContent .notableCard {
-    align-items: center; /* Align items to the start */
+    align-items: center;  
     padding: 10px 10px;
   }
   .notableFeaturesContent .notableCard .icon {
-    margin-bottom: 10px; /* Add spacing between the icon and text */
+    margin-bottom: 10px; 
     padding: 0;
   }
 
@@ -908,8 +907,8 @@
     width: 90%;
   }
   .cunstomerReviewContent .cards {
-    grid-template-columns: 1fr; /* Single-column layout */
-    gap: 10px; /* Adjust gap for better spacing */
+    grid-template-columns: 1fr;  
+    gap: 10px;  
   }
   .cunstomerReviewContent .cards .card {
     margin: 25px;
@@ -950,19 +949,19 @@
   }
   .footercontent .information {
     display: grid;
-    grid-template-columns: auto auto auto auto; /* Four columns */
-    grid-gap: 10px; /* Space between grid items */
+    grid-template-columns: auto auto auto auto;  
+    grid-gap: 10px; 
   }
   .footercontent .information .navigate {
-    grid-column: 1 / 2; /* Starts in the first column and spans to the second */
+    grid-column: 1 / 2;  
     grid-row: 1;
   }
   .footercontent .information .contact {
-    grid-column: 2 / 3; /* Starts in the second column and spans to the third */
+    grid-column: 2 / 3; 
     grid-row: 1;
   }
   .footercontent .information .subcribe {
-    grid-column: 1 / 3; /* Starts in the first column and spans to the third */
+    grid-column: 1 / 3;  
     grid-row: 2;
   }
   .footercontent .information .contact {
