--- a/style.css
+++ b/style.css
@@ -8,8 +8,8 @@
 /* NAVBAR*************************************************************** */
 .navbar {
   position: fixed;
-  top: 0;  
-  left: 0;  
+  top: 0;
+  left: 0;
   width: 100%;
   text-align: center;
   display: flex;
@@ -54,12 +54,14 @@
   text-align: center;
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column; 
+  flex-direction: column;
   align-items: center;
   color: white;
   background-color: #3755be;
   font-size: 20px;
   height: 90vh;
+  border-bottom-left-radius: 50% 200px;
+  border-bottom-right-radius: 50% 200px;
 }
 .headerContent {
   padding: 180px 100px;
@@ -71,9 +73,9 @@
   line-height: 1;
 }
 .headerContent p {
-  max-width: 89%;  
-  margin: auto;  
-  text-align: center;  
+  max-width: 89%;
+  margin: auto;
+  text-align: center;
   padding: 15px 0;
   letter-spacing: 1px;
 }
@@ -135,14 +137,14 @@
   font-size: 17px;
   font-weight: bold;
   padding: 15px 0;
-  display: flex; 
-  align-items: center;  
-  gap: 10px;  
+  display: flex;
+  align-items: center;
+  gap: 10px;
 }
 
 .LandingPageCardContent .cards .right ul li svg {
-  width: 34px;  
-  height: 34px;  
+  width: 34px;
+  height: 34px;
 }
 /* MORELANDINGPAGES************************************************** */
 .moreLandingPage {
@@ -310,6 +312,7 @@
 }
 
 /* LESSWORK ********************************************************** */
+
 .lessWorkContent {
   /* border: 1px solid black; */
   width: 50%;
@@ -378,8 +381,8 @@
 .pluginsContent {
   /* border: 1px solid black; */
   max-width: 75%;
-  margin: 0 auto;  
-  padding: 100px 0 10px 0;  
+  margin: 0 auto;
+  padding: 100px 0 10px 0;
 }
 .pluginsContent h1 {
   font-size: 40px;
@@ -425,14 +428,14 @@
 /* NOTABLE ********************************************************** */
 .NotableFeatures {
   background-color: #3755be;
-  margin: 0;  
-  padding: 0;  
+  margin: 0;
+  padding: 0;
 }
 
 .notableFeaturesContent {
   max-width: 75%;
-  margin: 0 auto;  
-  padding: 50px 0 100px 0; 
+  margin: 0 auto;
+  padding: 50px 0 100px 0;
 }
 
 .notableFeaturesContent h1 {
@@ -673,7 +676,7 @@
   font-size: 14px;
   margin: 20px 0;
 }
-@media (max-width: 381px) {
+@media (max-width: 481px) {
   /* NAVBAR *************************************************************** */
   .navbar {
     width: 100vw;
@@ -689,7 +692,7 @@
   }
   /* HEADER *************************************************************** */
   .header {
-    height: auto; 
+    height: auto;
     padding: 20px;
     width: 100%;
     /* margin: 0 auto; */
@@ -700,24 +703,22 @@
     padding: 120px 0;
     max-width: 100%;
 
-    box-sizing: border-box; 
+    box-sizing: border-box;
   }
   .header h1 {
-    font-size: 46px;  
+    font-size: 46px;
     line-height: 1.2;
     padding: 0;
     /* max-width: 99%; */
   }
   .headerContent p {
     font-size: 18px;
-    width: 100%; 
-    margin: 0 auto;  
+    width: 100%;
+    margin: 0 auto;
   }
   .headerContent .buttons {
     display: flex;
-
-    /* margin: 10px 0;  */
-    /* width: 100%;  */
+    justify-content: center;
   }
   .headerContent .buttons button {
     padding: 15px 35px;
@@ -740,7 +741,7 @@
   }
   .LandingPageCardContent .cards img {
     height: auto;
-    width: 350px;
+    width: 450px;
     margin: 0 auto;
     padding-right: 0;
     border-radius: 10px;
@@ -763,7 +764,7 @@
     padding: 20px 0;
   }
   .moreLandingPageContext .images img {
-    width: 350px;
+    width: 450px;
   }
   /* SVGDecoration******************************************* */
   .SVGDecorationContext {
@@ -779,7 +780,7 @@
   }
   .SVGDecorationContext .left img {
     height: auto;
-    width: 330px;
+    width: 400px;
   }
   .SVGDecorationContext .right {
     padding-left: 10px;
@@ -863,33 +864,32 @@
     max-width: 95%;
   }
   .pluginsContent .pluginCards {
-    grid-template-columns: 1fr;  
-    gap: 10px;  
+    grid-template-columns: 1fr;
+    gap: 10px;
   }
   .pluginsContent .pluginCard {
-   
-    align-items: center;  
-    padding: 10px 10px; 
+    align-items: center;
+    padding: 10px 10px;
   }
   .pluginsContent .pluginCard .icon {
-    margin-bottom: 10px; 
-    padding: 0;  
+    margin-bottom: 10px;
+    padding: 0;
   }
   /* NOTABLE ********************************************************** */
   .notableFeaturesContent {
     max-width: 95%;
   }
   .notableFeaturesContent .notableCards {
-    grid-template-columns: 1fr;  
-    gap: 10px;  
+    grid-template-columns: 1fr;
+    gap: 10px;
   }
 
   .notableFeaturesContent .notableCard {
-    align-items: center;  
+    align-items: center;
     padding: 10px 10px;
   }
   .notableFeaturesContent .notableCard .icon {
-    margin-bottom: 10px; 
+    margin-bottom: 10px;
     padding: 0;
   }
 
@@ -907,8 +907,8 @@
     width: 90%;
   }
   .cunstomerReviewContent .cards {
-    grid-template-columns: 1fr;  
-    gap: 10px;  
+    grid-template-columns: 1fr;
+    gap: 10px;
   }
   .cunstomerReviewContent .cards .card {
     margin: 25px;
@@ -949,19 +949,19 @@
   }
   .footercontent .information {
     display: grid;
-    grid-template-columns: auto auto auto auto;  
-    grid-gap: 10px; 
+    grid-template-columns: auto auto auto auto;
+    grid-gap: 10px;
   }
   .footercontent .information .navigate {
-    grid-column: 1 / 2;  
+    grid-column: 1 / 2;
     grid-row: 1;
   }
   .footercontent .information .contact {
-    grid-column: 2 / 3; 
+    grid-column: 2 / 3;
     grid-row: 1;
   }
   .footercontent .information .subcribe {
-    grid-column: 1 / 3;  
+    grid-column: 1 / 3;
     grid-row: 2;
   }
   .footercontent .information .contact {
